<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="@string/pref_openmode"
        android:summary="@string/open_summary"
        android:title="@string/open" />
    <EditTextPreference
        android:defaultValue="14"
        android:dialogTitle="@string/edit_dialog_title"
        android:key="@string/pref_size"
        android:summary="@string/edit_summary"
        android:title="@string/edit_title" />
    <ListPreference
        android:key="@string/pref_style"
        android:title="@string/text_style_title"
        android:summary="@string/text_style_summary"
        android:defaultValue="1"
        android:entries="@array/text_style"
        android:entryValues="@array/text_style"
        android:dialogTitle="@string/text_style_dialog_title" />
    <ListPreference
        android:key="@string/pref_color"
        android:title="@string/text_color_title"
        android:summary="@string/text_color_summary"
        android:defaultValue="1"
        android:entries="@array/text_color"
        android:entryValues="@array/text_color"
        android:dialogTitle="@string/text_color_dialog_title" />
</PreferenceScreen>